--- a/_posts/2020-01-01-home.md
+++ b/_posts/2020-01-01-home.md
@@ -5,7 +5,7 @@ color: black
 style: center
 ---
 
-<img src="./img/JK.jpg" width="200" height="200" />
+<img src="./img/pixelate.jpg" width="200" height="200" />
 
 # Jaskamal Kainth 
 
