added Social contacts icons

--- a/_posts/2020-01-05-contact.md
+++ b/_posts/2020-01-05-contact.md
@@ -1,11 +1,15 @@
 ---
 title: "contact"
-bg: blue
-color: black
+bg: black
+color: white
 fa-icon: users
 ---
 
+<div class="SocialBox">
+    <a href="mailto:kainthjaskamal@gmail.com" target="blank"><i class="fa fa-envelope fa-3x">  </i>           <h5>Gmail    </h5></a> 
+    <a href="https://github.com/Jaskamalkainth" target="blank"><i class="fa fa-github fa-3x"></i>             <h5>Github   </h5></a> 
+    <a href="https://www.twitter.com/j1k7_7" target="blank"><i class="fa fa-twitter fa-3x">  </i>             <h5>Twitter  </h5></a> 
+    <a href="https://www.facebook.com/j1k77" target="blank"><i class="fa fa-facebook fa-3x"> </i>             <h5>Facebook </h5></a> 
+    <a href="https://instagram.com/j1k7_7/" target="blank"><i class="fa fa-instagram fa-3x"> </i>             <h5>Instagram</h5></a> 
+</div>
 
-## Contact
-
-#### Please email me at kainthjaskamal@gmail.com
