Update about.md and Adding blog posts

--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -5,5 +5,12 @@ color: black
 fa-icon: code
 ---
 
+> **Algorithmic Problems and Solutions**
 
-#### Coming soon
+* A list of 20 Segment tree problems with difficulty starting from Easy to Hard. <a href="/blog_posts/segment_tree_problems.html" target="_blank"> Link </a>
+* A List of String related problems involving various Algorithms like *Z-Algorithm*, *Trie*, *Suffix Array*, *Aho-corasick*, *Hashing* .  <a href="https://codeforces.com/blog/entry/49938" target="_blank"> Link </a>
+* A list of Disjoint Set Union problems with. <a href="/blog_posts/DSU_problems.html" target="_blank"> Link </a>
+* Notes on the *Graph Theory* concepts and problems. <a href="https://codeforces.com/blog/entry/18585" target="_blank"> Link </a>
+
+
+
