--- a/_posts/2020-01-02-about.md
+++ b/_posts/2020-01-02-about.md
@@ -6,25 +6,28 @@ fa-icon: rocket
 ---
 
 
-<p> 
-I am a Senior Software engineer in <a href="https://research.samsung.com/sri-b" target="_blank">Samsung</a>. I graduated with B.E. Computer Science and M.Sc. Mathematics from 
-<a href="http://www.bits-pilani.ac.in" title="Birla Institute of Technology and Science, Pilani" target="_blank">BITS&nbsp;Pilani</a> in 2018. I love solving Algorithmic problems, mathematics and programming.
-</p>
+ I am a Senior Software engineer in <a href="https://research.samsung.com/sri-b" target="_blank">Samsung.</a> I have played an integral part in the design and development of the World's first commercialized MCPTT solution on Android which is a based on 3GPP's MCX communication standard, developed for first responders. Link: 
+<a href="https://images.samsung.com/is/content/samsung/p5/global/business/networks/insights/white-paper/mcptx-for-public-safety/mcptx-for-public-safety.pdf" target="_blank"> MCPTX for Public safety by Samsung Research.</a>
+I am also working to develop POCs for the on-device delployment of Machine Learning models and integrating with our MCPTT solution.
+ 
+ I graduated with a Dual degree in B.E. Computer Science and M.Sc. Mathematics from 
+<a href="http://www.bits-pilani.ac.in" title="Birla Institute of Technology and Science, Pilani" target="_blank">BITS&nbsp;Pilani</a> in 2018. 
 
-<p>
-I participate in a lot of programming competitions and generally go by the handle of "jaskamalkainth"( except  "j1k7_7" on Codechef). Here are my handles of some programming websites.
-</p>
+ I love solving algorithmic problems on online platforms and this was my main pastime during my time in college. I took part in many programming contests, like <a href="https://en.wikipedia.org/wiki/International_Collegiate_Programming_Contest" title="ACM-ICPC" target="_blank"> ACM-ICPC.</a>
 
+Here are my handles of some programming websites.
 <ul>
-<li><a href="http://codeforces.com/profile/jaskamalkainth" target="_blank">Codeforces</a></li>
-<li><a href="https://www.codechef.com/users/j1k7_7" target="_blank">Codechef</a></li>
-<li><a href="http://www.spoj.com/users/jaskamalkainth/" target="_blank">Spoj</a></li>
-<li><a href="https://www.hackerrank.com/jaskamal" target="_blank">HackerRank</a></li>
-<li><a href="https://www.hackerearth.com/@jaskamalkainth" target="_blank">Hackerearth</a></li>
+
+
+<li><a style="text-decoration:none" href="http://codeforces.com/profile/jaskamalkainth" target="_blank"> <img src="/img/codeforces_logo.png" width="40px" height="40px">  Codeforces</a></li>
+<li><a style="text-decoration:none" href="http://www.spoj.com/users/jaskamalkainth/" target="_blank"> <img src="/img/spoj_logo.png" width="40px" height="40px">  Spoj</a></li>
+<li><a style="text-decoration:none" href="https://www.hackerrank.com/jaskamal" target="_blank"> <img src="/img/hackerrank_logo.png" width="40px" height="40px">  HackerRank</a></li>
+<li><a style="text-decoration:none" href="https://www.hackerearth.com/@jaskamalkainth" target="_blank"> <img src="/img/hackerearth_logo.png" width="40px" height="40px">  Hackerearth</a></li>
+
 </ul>
 
 <p>
-My ICPCID for ACM International Collegiate Programming Contest - <a href="https://icpc.baylor.edu/ICPCID/TY7NYK0ENIEA" target="_blank">ICPCID</a>
+My ICPCID for ACM International Collegiate Programming Contest - <a style="text-decoration:none" href="https://icpc.baylor.edu/ICPCID/TY7NYK0ENIEA" target="_blank"> <img src="/img/icpc.png" width="100px" height="100px">   ICPCID</a>
 </p>
 
 
