--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -11,5 +11,13 @@ fa-icon: code
 * A List of String related problems involving various Algorithms like *Z-Algorithm*, *Trie*, *Suffix Array*, *Aho-corasick*, *Hashing* .  <a href="https://codeforces.com/blog/entry/49938" target="_blank"> Link </a>
 * A list of Disjoint Set Union problems. <a href="/blog_posts/DSU_problems.html" target="_blank"> Link </a>
 * Notes on the *Graph Theory* concepts and problems. <a href="https://codeforces.com/blog/entry/18585" target="_blank"> Link </a>
+
+> **Music**
+
+* Music is my only drug.  <a href="/blog_posts/music.html" target="_blank"> Link </a>
+
+> **Others**
+
 * Notes on the *Elasticsearch* concepts. <a href="/blog_posts/elasticsearchNotes.html" target="_blank"> Link </a>
+
 
