Added Linkedin fa-link

--- a/_posts/2020-01-05-contact.md
+++ b/_posts/2020-01-05-contact.md
@@ -11,5 +11,6 @@ fa-icon: users
     <a href="https://www.twitter.com/j1k7_7" target="blank"><i class="fa fa-twitter fa-3x">  </i>             <h5>Twitter  </h5></a> 
     <a href="https://www.facebook.com/j1k77" target="blank"><i class="fa fa-facebook fa-3x"> </i>             <h5>Facebook </h5></a> 
     <a href="https://instagram.com/j1k7_7/" target="blank"><i class="fa fa-instagram fa-3x"> </i>             <h5>Instagram</h5></a> 
+    <a href="https://www.linkedin.com/in/j1k77/" target="blank"><i class="fa fa-linkedin fa-3x"> </i>             <h5>Linkedin</h5></a> 
 </div>
 
