--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -1,6 +1,6 @@
 ---
 title: "Blog"
-bg: themeLight
+bg: themeTertiary
 color: black
 fa-icon: code
 ---
@@ -19,5 +19,3 @@ fa-icon: code
 > **Others**
 
 * Notes on the *Elasticsearch* concepts. <a href="/blog_posts/elasticsearchNotes.html" target="_blank"> Link </a>
-
-
