Added Projects Icon and spelling correction

--- a/_posts/2020-01-02-about.md
+++ b/_posts/2020-01-02-about.md
@@ -8,7 +8,7 @@ fa-icon: rocket
 
  I am a Senior Software engineer in <a href="https://research.samsung.com/sri-b" target="_blank">Samsung.</a> I have played an integral part in the design and development of the World's first commercialized MCPTT solution on Android which is based on 3GPP's MCX communication standard, developed for first responders. Link: 
 <a href="https://images.samsung.com/is/content/samsung/p5/global/business/networks/insights/white-paper/mcptx-for-public-safety/mcptx-for-public-safety.pdf" target="_blank"> MCPTX for Public safety by Samsung Research.</a>
-I am also working to develop POCs for the on-device delployment of Machine Learning models and integrating with our MCPTT solution.
+I am also working to develop POCs for the on-device deployment of Machine Learning models and integrating with our MCPTT solution.
  
  I graduated with a Dual degree in B.E. Computer Science and M.Sc. Mathematics from 
 <a href="http://www.bits-pilani.ac.in" title="Birla Institute of Technology and Science, Pilani" target="_blank">BITS&nbsp;Pilani</a> in 2018. 
