--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -8,9 +8,16 @@ fa-icon: code
 > **Algorithmic Problems and Solutions**
 
 * A list of 20 Segment tree problems with difficulty starting from Easy to Hard. <a href="/blog_posts/segment_tree_problems.html" target="_blank"> Link </a>
-* A List of String related problems involving various Algorithms like *Z-Algorithm*, *Trie*, *Suffix Array*, *Aho-corasick*, *Hashing* .  <a href="https://codeforces.com/blog/entry/49938" target="_blank"> Link </a>
+* A List of String related problems involving various Algorithms like *Z-Algorithm*, *Trie*, *Suffix Array*, *Aho-corasick*, *Hashing*.  <a href="https://codeforces.com/blog/entry/49938" target="_blank"> Link </a>
 * A list of Disjoint Set Union problems. <a href="/blog_posts/DSU_problems.html" target="_blank"> Link </a>
 * Notes on the *Graph Theory* concepts and problems. <a href="https://codeforces.com/blog/entry/18585" target="_blank"> Link </a>
+* 7 Solutions to 1 Problem - *Find the number of triplets which satisfies the property* A[i] < B[j] < C[k].
+    - <a href="https://www.geeksforgeeks.org/count-the-triplets-such-that-ai-bj-ck/" target = "_blank" > Problem link.</a>
+    - <a href="/blog_posts/GoodTriplets.pdf" target="_blank"> My Presentation slides.</a> 
+* *Fast fourier transformation* to multiply two polynomials in O(nlogn) time. FFT can be used to multiply 2 large numbers in nlogn time as well. 
+    More about FFT and its applications in the following links.
+    - <a href="https://codeforces.com/blog/entry/43499" target="_blank"> Codeforces Blog. </a>
+    - <a href="/blog_posts/FFT_LargeNumberMultiplication.pdf" target="_blank"> Portland University slides. </a>
 
 > **Music**
 
