--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -17,7 +17,7 @@ fa-icon: code
 * *Fast fourier transformation* to multiply two polynomials in O(nlogn) time. FFT can be used to multiply 2 large numbers in nlogn time as well. 
     More about FFT and its applications in the following links.
     - <a href="https://codeforces.com/blog/entry/43499" target="_blank"> Codeforces Blog. </a>
-    - <a href="/blog_posts/FFT_LargeNumberMultiplication.pdf" target="_blank"> Portland University slides. </a>
+    - <a href="/blog_posts/FFT_LargeNumberMultiplication.pdf" target="_blank"> Slides. </a>
 
 > **Music**
 
