--- a/_posts/2020-01-04-Projects.md
+++ b/_posts/2020-01-04-Projects.md
@@ -9,12 +9,12 @@ fa-icon: files-o
 
 * [**Energy-Efficient Scheduling Algorithms:**](/projects/JaskamalKainthCS_Thesis.pdf) (May 2018)
 
-    Benchmarking Scheduling algorithms like HEFT, Deadline slack, NDES, GDES using C++ to conclude the best algorithm for which the energy consumption is minimum for a real  time parallel application on a hetergeneous distributed embedded system.  
+    Benchmarking Scheduling algorithms like HEFT, Deadline slack, NDES, GDES using C++ to conclude the best algorithm for which the energy consumption is minimum for a real-time parallel application on a heterogeneous distributed embedded system.  
 
 
 * [**Numerical solutions for PDEs in Option pricing:**](projects/JaskamalKainthMATH_Thesis .pdf) (Dec 2017)
     
-    Applying *B-Spline collocation method* and *Radial basis function method* to solve the **Black Scholes equation** used in Option pricing.
+    Applying the *B-Spline collocation method* and *Radial basis function method* to solve the **Black Scholes equation** used in Option pricing.
 
 
 
