add codechef logo

--- a/_posts/2020-01-02-about.md
+++ b/_posts/2020-01-02-about.md
@@ -19,6 +19,7 @@ Here are my handles of some programming websites.
 <ul>
 
 <li><a style="text-decoration:none" href="http://codeforces.com/profile/jaskamalkainth" target="_blank"> <img src="/img/codeforces_logo.png" width="40px" height="40px">  Codeforces</a></li>
+<li><a style="text-decoration:none" href="https://www.codechef.com/users/j1k7_7" target="_blank"> <img src="/img/codechef_logo.png" width="40px" height="40px">  Codechef</a></li>
 <li><a style="text-decoration:none" href="http://www.spoj.com/users/jaskamalkainth/" target="_blank"> <img src="/img/spoj_logo.png" width="40px" height="40px">  Spoj</a></li>
 <li><a style="text-decoration:none" href="https://www.hackerrank.com/jaskamal" target="_blank"> <img src="/img/hackerrank_logo.png" width="40px" height="40px">  HackerRank</a></li>
 <li><a style="text-decoration:none" href="https://www.hackerearth.com/@jaskamalkainth" target="_blank"> <img src="/img/hackerearth_logo.png" width="40px" height="40px">  Hackerearth</a></li>
