--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -18,6 +18,7 @@ fa-icon: code
     More about FFT and its applications in the following links.
     - <a href="https://codeforces.com/blog/entry/43499" target="_blank"> Codeforces Blog. </a>
     - <a href="/blog_posts/FFT_LargeNumberMultiplication.pdf" target="_blank"> Slides. </a>
+* C++ Notes  <a href="/blog_posts/CppNotes.html" target="_blank"> Blog Link </a>
 
 > **Music**
 
