--- a/_posts/2020-01-02-about.md
+++ b/_posts/2020-01-02-about.md
@@ -6,14 +6,19 @@ fa-icon: rocket
 ---
 
 
- I am a Senior Software engineer at <a href="https://research.samsung.com/sri-b" target="_blank">Samsung.</a> I have played an integral part in the design and development of the World's first commercialized MCPTT solution on Android, which is based on 3GPP's MCX communication standard, developed for first responders. Link: 
+I am a Software engineer at <a href="https://research.samsung.com/sri-b" target="_blank">Samsung</a> with 4+ YOE, skilled in Data structures, Algorithms, Android library development (Native), C++, Java, Python, Spring, RESTful Web Services, HTTP/SIP protocol, Elasticsearch, Redis, AWS (EC2, S3, Lambdas, ELB, EMR, etc), Flatbuffers, NLP (Top2Vec, Doc2Vec, etc).
+
+I like teaching and I have Conducted more than 100hrs Data structures & Algorithms training and live problem-solving sessions coding for Samsung Employees.
+
+Currently, I am part of the Samsung Search Platform’s backend team, contributing to the design and development of the microservice architecture which caters to multiple clients like Galaxy store, Estore, etc.
+
+I have played an integral part in the development of the World’s first commercialized MCPTT solution on Android, which is based on 3GPP’s MCX communication standard, developed for first responders. Link: 
 <a href="https://images.samsung.com/is/content/samsung/p5/global/business/networks/insights/white-paper/mcptx-for-public-safety/mcptx-for-public-safety.pdf" target="_blank"> MCPTX for Public safety by Samsung Research.</a>
-I am also working to develop POCs for the on-device deployment of Machine Learning models and integrating with our MCPTT solution.
  
- I graduated with a Dual degree in B.E. Computer Science and M.Sc. Mathematics from 
+I graduated with a Dual degree in B.E. Computer Science and M.Sc. Mathematics from 
 <a href="http://www.bits-pilani.ac.in" title="Birla Institute of Technology and Science, Pilani" target="_blank">BITS&nbsp;Pilani</a> in 2018. 
 
- I love solving algorithmic problems on online platforms and this was my main pastime during my time in college. I took part in many programming contests, like <a href="https://en.wikipedia.org/wiki/International_Collegiate_Programming_Contest" title="ACM-ICPC" target="_blank"> ACM-ICPC.</a>
+I love solving algorithmic problems on online platforms and this was my main pastime during my time in college. I took part in many programming contests, like <a href="https://en.wikipedia.org/wiki/International_Collegiate_Programming_Contest" title="ACM-ICPC" target="_blank"> ACM-ICPC.</a>
 
 Here are my handles of some programming websites.
 <ul>
@@ -26,7 +31,7 @@ Here are my handles of some programming websites.
 
 </ul>
 <p>
-My ICPCID for ACM International Collegiate Programming Contest - <a style="text-decoration:none" href="https://icpc.baylor.edu/ICPCID/TY7NYK0ENIEA" target="_blank"> <img src="/img/icpc.png" width="100px" height="100px">   ICPCID</a>
+My ICPCID for ACM International Collegiate Programming Contest - <a style="text-decoration:none" href="https://icpc.global/ICPCID/TY7NYK0ENIEA" target="_blank"> <img src="/img/icpc.png" width="100px" height="100px">   ICPCID</a>
 </p>
 
 
