--- a/_posts/2020-01-02-about.md
+++ b/_posts/2020-01-02-about.md
@@ -8,7 +8,7 @@ fa-icon: rocket
 
 I am a Software engineer at <a href="https://research.samsung.com/sri-b" target="_blank">Samsung</a> with 4+ YOE, skilled in Data structures, Algorithms, Android library development (Native), C++, Java, Python, Spring, RESTful Web Services, HTTP/SIP protocol, Elasticsearch, Redis, AWS (EC2, S3, Lambdas, ELB, EMR, etc), Flatbuffers, NLP (Top2Vec, Doc2Vec, etc).
 
-I like teaching and I have Conducted more than 100hrs Data structures & Algorithms training and live problem-solving sessions coding for Samsung Employees.
+I like teaching and I have Conducted more than 100hrs of Data structures & Algorithms training and live problem-solving coding sessions for Samsung Employees.
 
 Currently, I am part of the Samsung Search Platform’s backend team, contributing to the design and development of the microservice architecture which caters to multiple clients like Galaxy store, Estore, etc.
 
