update about md

--- a/_posts/2020-01-02-about.md
+++ b/_posts/2020-01-02-about.md
@@ -6,19 +6,15 @@ fa-icon: rocket
 ---
 
 
-I am a Software engineer at <a href="https://research.samsung.com/sri-b" target="_blank">Samsung</a> with 4+ YOE, skilled in Data structures, Algorithms, Android library development (Native), C++, Java, Python, Spring, RESTful Web Services, HTTP/SIP protocol, Elasticsearch, Redis, AWS (EC2, S3, Lambdas, ELB, EMR, etc), Flatbuffers, NLP (Top2Vec, Doc2Vec, etc).
+I am a seasoned Software Engineer with over five years of experience in Data Structures, Algorithms, Elasticsearch, AI/ML (NLP), Spring, RESTful Web Services, HTTP/SIP protocol, mySQL, and AWS Cloud Services.
 
-I like teaching and I have Conducted more than 100hrs of Data structures & Algorithms training and live problem-solving coding sessions for Samsung Employees.
+My strong engineering background is complemented by a dual degree in Mathematics and Computer Science from BITS Pilani, Pilani campus.
 
-Currently, I am part of the Samsung Search Platform’s backend team, contributing to the design and development of the microservice architecture which caters to multiple clients like Galaxy store, Estore, etc.
+In addition to my technical expertise, I am passionate about sharing my knowledge and experience with others. With a focus on enhancing software competency, I have conducted over 200 hours of DSA training and live coding problem-solving sessions for Samsung employees.
 
-I have played an integral part in the development of the World’s first commercialized MCPTT solution on Android, which is based on 3GPP’s MCX communication standard, developed for first responders. Link: 
-<a href="https://images.samsung.com/is/content/samsung/p5/global/business/networks/insights/white-paper/mcptx-for-public-safety/mcptx-for-public-safety.pdf" target="_blank"> MCPTX for Public safety by Samsung Research.</a>
- 
-I graduated with a Dual degree in B.E. Computer Science and M.Sc. Mathematics from 
-<a href="http://www.bits-pilani.ac.in" title="Birla Institute of Technology and Science, Pilani" target="_blank">BITS&nbsp;Pilani</a> in 2018. 
+I am dedicated to continuously improving my skills and contributing to the growth of the technology industry.
 
-I love solving algorithmic problems on online platforms and this was my main pastime during my time in college. I took part in many programming contests, like <a href="https://en.wikipedia.org/wiki/International_Collegiate_Programming_Contest" title="ACM-ICPC" target="_blank"> ACM-ICPC.</a>
+I love solving algorithmic problems on online platforms and I took part in many programming contests, like <a href="https://en.wikipedia.org/wiki/International_Collegiate_Programming_Contest" title="ACM-ICPC" target="_blank"> ACM-ICPC.</a>
 
 Here are my handles of some programming websites.
 <ul>
