Refactor and merge Exp, Project to Blogs

--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -2,28 +2,172 @@
 title: "Blog"
 bg: themeTertiary
 color: black
-fa-icon: code
+fa-icon: pencil
 ---
 
-> **Algorithmic Problems and Solutions**
+<link rel="stylesheet" href="/css/blog.css">
 
-* A list of 20 Segment tree problems with difficulty starting from Easy to Hard. <a href="/blog_posts/segment_tree_problems.html" target="_blank"> Link </a>
-* A List of String related problems involving various Algorithms like *Z-Algorithm*, *Trie*, *Suffix Array*, *Aho-corasick*, *Hashing*.  <a href="https://codeforces.com/blog/entry/49938" target="_blank"> Link </a>
-* A list of Disjoint Set Union problems. <a href="/blog_posts/DSU_problems.html" target="_blank"> Link </a>
-* Notes on the *Graph Theory* concepts and problems. <a href="https://codeforces.com/blog/entry/18585" target="_blank"> Link </a>
-* 7 Solutions to 1 Problem - *Find the number of triplets which satisfies the property* A[i] < B[j] < C[k].
-    - <a href="https://www.geeksforgeeks.org/count-the-triplets-such-that-ai-bj-ck/" target = "_blank" > Problem link.</a>
-    - <a href="/blog_posts/GoodTriplets.pdf" target="_blank"> My Presentation slides.</a> 
-* *Fast fourier transformation* to multiply two polynomials in O(nlogn) time. FFT can be used to multiply 2 large numbers in nlogn time as well. 
-    More about FFT and its applications in the following links.
-    - <a href="https://codeforces.com/blog/entry/43499" target="_blank"> Codeforces Blog. </a>
-    - <a href="/blog_posts/FFT_LargeNumberMultiplication.pdf" target="_blank"> Slides. </a>
-* C++ Notes  <a href="/blog_posts/CppNotes.html" target="_blank"> Blog Link </a>
+<div class="blog-container">
+  <section class="category-section">
+    <div class="category-header">
+      <i class="fa fa-graduation-cap category-icon"></i>
+      <h2>Academic Work</h2>
+    </div>
+    
+    <div class="post-grid">
+      <div class="post-card academic-card">
+        <h3>Energy-Efficient Scheduling Algorithms</h3>
+        <p>Benchmarking scheduling algorithms like HEFT, Deadline slack, NDES, GDES using C++ to conclude the best algorithm for which the energy consumption is minimum for a real-time parallel application on a heterogeneous distributed embedded system.</p>
+        <a href="/projects/JaskamalKainthCS_Thesis.pdf" target="_blank" class="post-link">
+          <i class="fa fa-file-pdf-o"></i> View Thesis
+        </a>
+        <div class="post-date">May 2018</div>
+      </div>
+      
+      <div class="post-card academic-card">
+        <h3>Numerical solutions for PDEs in Option pricing</h3>
+        <p>Applying the <em>B-Spline collocation method</em> and <em>Radial basis function method</em> to solve the <strong>Black Scholes equation</strong> used in Option pricing.</p>
+        <a href="/projects/JaskamalKainthMATH_Thesis.pdf" target="_blank" class="post-link">
+          <i class="fa fa-file-pdf-o"></i> View Thesis
+        </a>
+        <div class="post-date">December 2017</div>
+      </div>
+    </div>
+  </section>
 
-> **Music**
-
-* Music is my only drug.  <a href="/blog_posts/music.html" target="_blank"> Link </a>
-
-> **Others**
-
-* Notes on the *Elasticsearch* concepts. <a href="/blog_posts/elasticsearchNotes.html" target="_blank"> Link </a>
+  <section class="category-section">
+    <div class="category-header">
+      <i class="fa fa-code category-icon"></i>
+      <h2>Algorithmic Problems and Solutions</h2>
+    </div>
+    
+    <div class="post-grid">
+      <div class="post-card">
+        <h3>Segment Tree Problems</h3>
+        <p>A curated list of 20 Segment tree problems with difficulty ranging from Easy to Hard.</p>
+        <a href="/blog_posts/segment_tree_problems.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Read
+        </a>
+        <div class="post-date">July 2018</div>
+      </div>
+      
+      <div class="post-card">
+        <h3>String Algorithm Problems</h3>
+        <p>A collection of String related problems involving various Algorithms like <em>Z-Algorithm</em>, <em>Trie</em>, <em>Suffix Array</em>, <em>Aho-corasick</em>, and <em>Hashing</em>.</p>
+        <a href="https://codeforces.com/blog/entry/49938" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Read
+        </a>
+        <div class="post-date">June 2018</div>
+      </div>
+      
+      <div class="post-card">
+        <h3>Disjoint Set Union Problems</h3>
+        <p>A comprehensive list of problems using Disjoint Set Union data structure.</p>
+        <a href="/blog_posts/DSU_problems.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Read
+        </a>
+        <div class="post-date">May 2018</div>
+      </div>
+      
+      <div class="post-card">
+        <h3>Graph Theory Notes</h3>
+        <p>Detailed notes on the <em>Graph Theory</em> concepts and related problem-solving techniques.</p>
+        <a href="https://codeforces.com/blog/entry/18585" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Read
+        </a>
+        <div class="post-date">April 2018</div>
+      </div>
+      
+      <div class="post-card">
+        <h3>7 Solutions to 1 Problem</h3>
+        <p>Multiple approaches to solve: <em>Find the number of triplets which satisfies the property</em> A[i] < B[j] < C[k].</p>
+        <div class="multi-link">
+          <a href="https://www.geeksforgeeks.org/count-the-triplets-such-that-ai-bj-ck/" target="_blank" class="post-link">
+            <i class="fa fa-question-circle"></i> Problem
+          </a>
+          <a href="/blog_posts/GoodTriplets.pdf" target="_blank" class="post-link">
+            <i class="fa fa-file-powerpoint-o"></i> Slides
+          </a>
+        </div>
+        <div class="post-date">March 2018</div>
+      </div>
+      
+      <div class="post-card">
+        <h3>Fast Fourier Transformation</h3>
+        <p>How to multiply two polynomials in O(nlogn) time using FFT and its applications for large number multiplication.</p>
+        <div class="multi-link">
+          <a href="https://codeforces.com/blog/entry/43499" target="_blank" class="post-link">
+            <i class="fa fa-newspaper-o"></i> Blog
+          </a>
+          <a href="/blog_posts/FFT_LargeNumberMultiplication.pdf" target="_blank" class="post-link">
+            <i class="fa fa-file-powerpoint-o"></i> Slides
+          </a>
+        </div>
+        <div class="post-date">February 2018</div>
+      </div>
+      
+      <div class="post-card">
+        <h3>C++ Notes</h3>
+        <p>Comprehensive notes on C++ programming language concepts and techniques.</p>
+        <a href="/blog_posts/CppNotes.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Read
+        </a>
+        <div class="post-date">January 2018</div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="category-section">
+    <div class="category-header">
+      <i class="fa fa-flask category-icon"></i>
+      <h2>Experiments & Interactive Demos</h2>
+    </div>
+    
+    <div class="post-grid">
+      <div class="post-card experiment-card">
+        <h3>Random Bounce Pattern with Dots</h3>
+        <p>An interactive visualization demonstrating particle simulation with bouncing dots.</p>
+        <a href="/blog_posts/experiments/experiment1/dots.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Demo
+        </a>
+        <div class="post-date">March 2023</div>
+      </div>
+      
+      <div class="post-card experiment-card">
+        <h3>ANN HNSW Simulation</h3>
+        <p>Visualization of Hierarchical Navigable Small World algorithm for approximate nearest neighbor search.</p>
+        <a href="/blog_posts/experiments/hnsw-simul/index.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Demo
+        </a>
+        <div class="post-date">June 2023</div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="category-section">
+    <div class="category-header">
+      <i class="fa fa-lightbulb-o category-icon"></i>
+      <h2>Others</h2>
+    </div>
+    
+    <div class="post-grid">
+      <div class="post-card music-card">
+        <h3>Music is my only drug</h3>
+        <p>Thoughts, playlists, and more about my passion for music.</p>
+        <a href="/blog_posts/music.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Read
+        </a>
+        <div class="post-date">December 2019</div>
+      </div>
+      
+      <div class="post-card">
+        <h3>Elasticsearch Notes</h3>
+        <p>Comprehensive notes on <em>Elasticsearch</em> concepts and best practices.</p>
+        <a href="/blog_posts/elasticsearchNotes.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Read
+        </a>
+        <div class="post-date">September 2019</div>
+      </div>
+    </div>
+  </section>
+</div>
