Refactor and Improve UI

--- a/_posts/2020-01-01-home.md
+++ b/_posts/2020-01-01-home.md
@@ -9,7 +9,7 @@ style: center
 
 # Jaskamal Kainth 
 
-### Chief Software Engineer, Samsung
+### Software Engineer, Samsung
 
 ### Mathematics and Computer Science, BITS Pilani
 
