--- a/_posts/2020-01-02-about.md
+++ b/_posts/2020-01-02-about.md
@@ -2,33 +2,69 @@
 title: "about"
 bg: themeLighter
 color: black
-fa-icon: rocket
+fa-icon: user-circle
 ---
 
+<link rel="stylesheet" href="/css/about.css">
 
-Software Engineer with 6+ years of experience in Data Structures, Algorithms, Elasticsearch, AI/ML (NLP), GenAI, Spring, RESTful Web Services, HTTP/SIP protocol, and AWS Cloud Services.
-
-My strong engineering background is complemented by a dual degree in Mathematics and Computer Science from BITS Pilani, Pilani campus.
-
-In addition to my technical expertise, I am passionate about sharing my knowledge and experience with others. With a focus on enhancing software competency, I have conducted over 200 hours of DSA training and live coding problem-solving sessions for Samsung employees.
-
-I am dedicated to continuously improving my skills and contributing to the growth of the technology industry.
-
-I love solving algorithmic problems on online platforms and I took part in many programming contests, like <a href="https://en.wikipedia.org/wiki/International_Collegiate_Programming_Contest" title="ACM-ICPC" target="_blank"> ACM-ICPC.</a>
-
-Here are my handles of some programming websites.
-<ul>
-
-<li><a style="text-decoration:none" href="http://codeforces.com/profile/jaskamalkainth" target="_blank"> <img src="/img/codeforces_logo.png" width="40px" height="40px">  Codeforces</a></li>
-<li><a style="text-decoration:none" href="https://www.codechef.com/users/j1k7_7" target="_blank"> <img src="/img/codechef_logo.png" width="40px" height="40px">  Codechef</a></li>
-<li><a style="text-decoration:none" href="http://www.spoj.com/users/jaskamalkainth/" target="_blank"> <img src="/img/spoj_logo.png" width="40px" height="40px">  Spoj</a></li>
-<li><a style="text-decoration:none" href="https://www.hackerrank.com/jaskamal" target="_blank"> <img src="/img/hackerrank_logo.png" width="40px" height="40px">  HackerRank</a></li>
-<li><a style="text-decoration:none" href="https://www.hackerearth.com/@jaskamalkainth" target="_blank"> <img src="/img/hackerearth_logo.png" width="40px" height="40px">  Hackerearth</a></li>
-
-</ul>
-<p>
-My ICPCID for ACM International Collegiate Programming Contest - <a style="text-decoration:none" href="https://icpc.global/ICPCID/TY7NYK0ENIEA" target="_blank"> <img src="/img/icpc.png" width="100px" height="100px">   ICPCID</a>
-</p>
+<div class="about-container">
+  <div class="bio-section">
+    <h2 class="section-heading">Professional Profile</h2>
+    <p class="bio-content">
+      Software Engineer with <strong>7+ years</strong> of experience specializing in Data Structures, Algorithms, Elasticsearch, AI/ML (NLP), Generative AI, Spring, RESTful Web Services, HTTP/SIP protocol, and AWS Cloud Services.
+    </p>
+    <p class="bio-content">
+      My technical expertise is built upon a solid foundation of a dual degree in Mathematics and Computer Science from BITS Pilani, Pilani campus.
+    </p>
+    <p class="bio-content">
+      Passionate about knowledge sharing and technical mentorship, I've conducted over 300 hours of DSA training and live coding problem-solving sessions for Samsung employees, helping build stronger engineering teams.
+    </p>
+    <p class="bio-content">
+      I remain committed to continuous learning and making meaningful contributions to advance technology solutions.
+    </p>
+    
+    <p class="bio-content">
+      During college, I used to actively participate in algorithmic problem-solving on various competitive programming platforms, including <a href="https://en.wikipedia.org/wiki/International_Collegiate_Programming_Contest" title="ACM-ICPC" target="_blank">ACM-ICPC</a>.
+    </p>
+    
+    <div class="platforms-grid">
+      <a href="http://codeforces.com/profile/jaskamalkainth" target="_blank" class="platform-link">
+        <img src="/img/codeforces_logo.png" alt="Codeforces">
+        <span>Codeforces</span>
+      </a>
+      
+      <a href="https://www.codechef.com/users/j1k7_7" target="_blank" class="platform-link">
+        <img src="/img/codechef_logo.png" alt="Codechef">
+        <span>Codechef</span>
+      </a>
+      
+      <a href="http://www.spoj.com/users/jaskamalkainth/" target="_blank" class="platform-link">
+        <img src="/img/spoj_logo.png" alt="Spoj">
+        <span>Spoj</span>
+      </a>
+      
+      <a href="https://www.hackerrank.com/jaskamal" target="_blank" class="platform-link">
+        <img src="/img/hackerrank_logo.png" alt="HackerRank">
+        <span>HackerRank</span>
+      </a>
+      
+      <a href="https://www.hackerearth.com/@jaskamalkainth" target="_blank" class="platform-link">
+        <img src="/img/hackerearth_logo.png" alt="Hackerearth">
+        <span>Hackerearth</span>
+      </a>
+    </div>
+    
+    <div class="icpc-section">
+      <p>
+        <span>My ICPCID for ACM International Collegiate Programming Contest:</span>
+        <a href="https://icpc.global/ICPCID/TY7NYK0ENIEA" target="_blank" class="icpc-link">
+          <img src="/img/icpc.png" alt="ICPC">
+          <span>TY7NYK0ENIEA</span>
+        </a>
+      </p>
+    </div>
+  </div>
+</div>
 
 
 
