Add Bloom Filter blog

--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -88,6 +88,20 @@ fa-icon: pencil
         <div class="post-date">July 2017</div>
       </div>
       
+      <div class="post-card highlight-card">
+        <h3>Bloom Filters</h3>
+        <p>Understanding Bloom Filters: a space-efficient probabilistic data structure with implementation and mathematical analysis of false positive rates.</p>
+        <div class="multi-link">
+          <a href="/blog_posts/bloom_filters.html" target="_blank" class="post-link">
+            <i class="fa fa-file-text-o"></i> Article
+          </a>
+          <a href="https://github.com/Jaskamalkainth/BloomFilter/blob/master/bloom_filters.cpp" target="_blank" class="post-link">
+            <i class="fab fa-github"></i> Code
+          </a>
+        </div>
+        <div class="post-date">March 2023</div>
+      </div>
+      
       <div class="post-card">
         <h3>String Algorithm Problems</h3>
         <p>A collection of String related problems involving various Algorithms like <em>Z-Algorithm</em>, <em>Trie</em>, <em>Suffix Array</em>, <em>Aho-corasick</em>, and <em>Hashing</em>.</p>
