Add Pixelate image demo

--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -139,6 +139,15 @@ fa-icon: pencil
     
     <div class="post-grid">
       <div class="post-card experiment-card">
+        <h3>Pixelate Your Image</h3>
+        <p>Upload any image and transform it into pixel art with random character overlays.</p>
+        <a href="/blog_posts/experiments/pixelate/index.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Demo
+        </a>
+        <div class="post-date">May 2025</div>
+      </div>
+      
+      <div class="post-card experiment-card">
         <h3>ANN HNSW Simulation</h3>
         <p>Visualization of Hierarchical Navigable Small World algorithm for approximate nearest neighbor search.</p>
         <a href="/blog_posts/experiments/hnsw-simul/index.html" target="_blank" class="post-link">
