--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -52,6 +52,9 @@ fa-icon: pencil
           <a href="https://github.com/Jaskamalkainth/BloomFilter/blob/master/bloom_filters.cpp" target="_blank" class="post-link">
             <i class="fab fa-github"></i> Code
           </a>
+          <a href="/blog_posts/experiments/bloom-filter/index.html" target="_blank" class="post-link">
+            <i class="fa fa-play-circle"></i> Interactive Demo
+          </a>
         </div>
         <div class="post-date">March 2023</div>
       </div>
