Add Korean Language Learning blog notes

--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -187,6 +187,20 @@ fa-icon: pencil
       </div>
       
       <div class="post-card">
+        <h3>한국어 학습 여정 (My Korean Learning Journey)</h3>
+        <p>From 한글 (Hangul) basics to complex grammar structures - documenting my adventure in mastering Korean, complete with study materials, progress tracking, and cultural insights.</p>
+        <div class="multi-link">
+          <a href="/blog_posts/korean-learning-notes.html" target="_blank" class="post-link">
+            <i class="fa fa-external-link"></i> Read
+          </a>
+          <a href="https://github.com/Jaskamalkainth/korean-language-learning-notes/tree/main" target="_blank" class="post-link">
+            <i class="fab fa-github"></i> Notes
+          </a>
+        </div>
+        <div class="post-date">May 2025</div>
+      </div>
+      
+      <div class="post-card">
         <h3>Elasticsearch Notes</h3>
         <p>Comprehensive notes on <em>Elasticsearch</em> concepts and best practices.</p>
         <a href="/blog_posts/elasticsearchNotes.html" target="_blank" class="post-link">
