Add Philosophy notes

--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -177,13 +177,22 @@ fa-icon: pencil
     </div>
     
     <div class="post-grid">
+      <div class="post-card philosophy-card">
+        <h3>Philosophy Notes: Great Thinkers of the Last Century</h3>
+        <p>I'm fascinated by philosophy, psychology, and the study of human mind - what we do, why we do it. Here are my notes on influential thinkers who explored these fundamental questions.</p>
+        <a href="/blog_posts/philosophy-notes.html" target="_blank" class="post-link">
+          <i class="fa fa-external-link"></i> Read Notes
+        </a>
+        <div class="post-date">May 2025</div>
+      </div>
+      
       <div class="post-card">
         <h3>한국어 학습 여정 (My Korean Learning Journey)</h3>
         <p>From 한글 (Hangul) basics to complex grammar structures - documenting my adventure in mastering Korean.</p>
         <a href="/blog_posts/korean-learning-notes.html" target="_blank" class="post-link">
           <i class="fa fa-external-link"></i> View Journey
         </a>
-        <div class="post-date">May 2025</div>
+        <div class="post-date">April 2025</div>
       </div>
       
       <div class="post-card music-card">
@@ -205,4 +214,5 @@ fa-icon: pencil
       </div>
     </div>
   </section>
+
 </div>
