Update blog and music :)

--- a/_posts/2020-01-03-Blog.md
+++ b/_posts/2020-01-03-Blog.md
@@ -206,7 +206,7 @@ fa-icon: pencil
       
       <div class="post-card music-card">
         <h3>Music is my only drug</h3>
-        <p>Thoughts, playlists, and more about my passion for music.</p>
+        <p>Music is my oxygen, my escape, my everything. Dive into the sonic landscapes that shape my world and discover what makes my heart beat.</p>
         <a href="/blog_posts/music.html" target="_blank" class="post-link">
           <i class="fa fa-external-link"></i> Read
         </a>
