Add Class 3  notes

--- a/_posts/2020-01-02-about.md
+++ b/_posts/2020-01-02-about.md
@@ -14,7 +14,7 @@ fa-icon: user-circle
       AI Search Engineer with 7+ years of experience in building large-scale, intelligent search systems. Specialized in Data Structures & Algorithms, AWS OpenSearch/Elasticsearch, AI/ML (NLP), Generative AI, Spring, RESTful Web Services, and cloud-native architectures.
     </p>
     <p class="bio-content">
-      Currently leading a Core Search team, driving backend microservices with Search & Logging APIs, query preprocessing, retrieval, ranking, reranking, and integration of NLP, AI/ML, and Generative AI models. Successfully scaled search platform from 1 to 55+ global site markets, ensuring high availability, scalability, and advanced search relevance.
+      Currently leading a Core Search team, driving backend microservices with Search & Logging APIs, query preprocessing, retrieval, ranking, reranking, and integration of NLP, AI/ML, and Generative AI models. Successfully scaled search platform globally across multiple sites with different languages, ensuring high availability, scalability, and advanced search relevance.
     </p>
     <p class="bio-content">
       With a dual degree in Mathematics and Computer Science from BITS Pilani, I bring a strong academic foundation to practical engineering challenges.
